--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Custom styles for Swiper */
+.mySwiper {
+  width: 100%;
+  height: 100%;
+}
+.swiper-slide{
+    /* width: 40% !important; or any other value */
+    width: 80% !important;
+    height: 100% !important;
+    box-sizing: border-box;
+    flex-shrink: 1 !important;
+ }
+ .swiper-container { max-width: 1280px; }
+.swiper-slide-custom {
+  @apply w-auto; /* Ensure each slide takes up its natural width */
+  flex-shrink: 0; /* Prevent shrinking */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Custom styles for Swiper navigation buttons */
+.swiper-button-next,
+.swiper-button-prev {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:  white !important;
+    width: 35px !important;
+height: 35px !important;
+background-color:#22c55e;
+border-radius: 50%;
+}
+.swiper-button-next::after
+{
+  display: block;
+
+  font-size: 20px !important;
+  font-weight: 700 !important;
+  margin-top: 2px;
+margin-left: 2px;
+}
+.swiper-button-prev::after {
+  display: block;
+  font-size: 20px !important;
+  font-weight: 700 !important;
+  margin-right: 2px;
+  margin-top: 2px;
+
+}
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+    color: white;
 }
